--- a/wwr/styles/site-plan.css
+++ b/wwr/styles/site-plan.css
@@ -42,6 +42,12 @@ img {
   margin: 0 auto;
   max-width: 300px;
 }
+
+img {
+  width: 40%;
+  border: 4px solid steelblue;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
@@ -120,6 +126,24 @@ nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
+
+a :hover {
+  background-color: white;
+  color: steelblue;
+}
+
+a { 
+  font-size: 1.5em;
+  color: white;
+  margin: 40px;
+  line-height: 1.5em;
+}
+
+nav, footer {
+  background-color: steelblue;
+  padding: 10px;
+}
+
 .sitemap {
   display: grid;
   justify-content: center;
@@ -163,3 +187,4 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
